@@ -23,7 +23,7 @@ import org.slf4j.LoggerFactory;
  *
  * <p>
  * Although not tied to Spring, this class would typically be declared as a singleton in the Spring XML application context
- * created by a {@link SpringVaadinSession}, allowing other beans and widgets in the Vaadin application context to autowire
+ * created by a {@link SpringVaadinSessionListener}, allowing other beans and widgets in the Vaadin application context to autowire
  * it and have access to the methods provided here. If this class is subclassed, additional application-specific fields and
  * methods can be supplied to the entire application via the same mechanism.
  * </p>
@@ -37,7 +37,7 @@ import org.slf4j.LoggerFactory;
  * </p>
  *
  * @see SpringVaadinServlet
- * @see SpringVaadinSession
+ * @see SpringVaadinSessionListener
  * @see com.vaadin.server.VaadinService
  */
 public class VaadinApplication {
